fix: fix layout issues

--- a/assets/section-featured-testimonial.css
+++ b/assets/section-featured-testimonial.css
@@ -21,27 +21,12 @@
   align-self: center;
 }
 
-.testimonial.background-primary .testimonial-card {
-  background: rgb(var(--color-background))
-    linear-gradient(rgba(var(--color-foreground), 0.04), rgba(var(--color-foreground), 0.04));
-}
-
-.testimonial.background-none .testimonial-card {
-  border-radius: 0;
-}
-
 .testimonial-card-info {
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 2.5rem;
-}
-
-.background-none .testimonial-card-info {
-  padding-top: 0;
-  padding-left: 0;
-  padding-right: 0;
 }
 
 .testimonial-text {
@@ -68,11 +53,6 @@
 .testimonial-list p {
   margin: 0;
   line-height: calc(1 + 0.5 / max(1, var(--font-heading-scale)));
-}
-
-.background-none .testimonial-card-spacing {
-  padding: 0;
-  margin: 0;
 }
 
 .testimonial .button {
